--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
     color: #000000;
-    --link-color-hover: #404BBF;
+    --link-color-hover: black ;
     --heading-font-family:"Raleway", sans-serif;
     --text-font-family:"Roboto", sans-serif;
 }
@@ -10,29 +10,44 @@
 }
 
 ul {
-    list-style-type: none;
+    list-style-type:none;
+}
+
+a {
+    text-decoration: none;
+    color: #2E2F42;
 }
 
 .global-header .main-nav a:hover {
-    color: var(--link-color_hover);
+    color: var(--link-color_hover): #000000
     cursor: pointer;
 }
 
-button {
-    cursor: pointer;
-}
-
-button:active {
-    background-color: #8309f5;
+.button{
+    background-color: #4D5AE5 ;
     /* Culoarea dorită când butonul este apăsat */
     color: white;
     /* Culoarea textului pentru contrast */
+    border-width: 0.5px;
+    cursor: pointer;
 }
 
 .web,
 .studio{
     --heading-font-family: "Raleway", sans-serif;
-    font-weight: 800;  
+    font-weight: 800;
+    text-decoration: none;
+    color: #000000;
+   
+}
+
+.web{
+    color: #4D5AE5;
+}
+
+.studio{
+    color: #2E2F42;
+    margin: -0.25%;
 }
 
 .nav-bar,
@@ -52,9 +67,20 @@ button:active {
 }
 
 .button-1,
-.button-category{
+.button-category:active{
     --text-font-family: "Roboto" sans-serif;
+    color: white;
     font-weight: 500;
+    background-color: #4D5AE5;
+    border-radius: 2px;
+    padding: 10 px;
+}
+
+.button-category{
+    color: #4D5AE5;
+    background-color: #E7E9FC;
+    border-radius: 2px;
+    border-width: 0.1px;
 }
 
 .h3-sections,
